# ysn-test

./: .env  .gitignore  Makefile  README.md  docker-compose-integration-test.yaml  docker-compose.yaml  wait_success.sh
clickhouse-server/: Dockerfile
clickhouse-server/migrations/: private_hits.sql  public_hits.sql
integration-test/: Dockerfile  conftest.py  pyproject.toml  test_api.py
integration-test/templates/: android.json
ysn/: dev.env  pyproject.toml  setup.cfg
ysn/appsflyer/: clickhouse_storage.py  settings.py  webhook_app.py
